# PlatFormer

./: CMakeLists.txt  README.md
Data/: README
Data/Images/: Thumbs.db
Data/Images/kenney_physicspack/PNG/Aliens/: Thumbs.db
Data/Images/kenney_physicspack/PNG/Backgrounds/: Thumbs.db
Data/Images/kenney_physicspack/PNG/Explosive elements/: Thumbs.db
Data/Images/kenney_physicspack/PNG/Glass elements/: Thumbs.db
Data/Images/kenney_physicspack/PNG/Metal elements/: Thumbs.db
Data/Images/kenney_physicspack/PNG/Other/: Thumbs.db
Data/Images/kenney_physicspack/PNG/Stone elements/: Thumbs.db
Data/Images/kenney_physicspack/PNG/Wood elements/: Thumbs.db
Data/Images/kenney_physicspack/Spritesheet/: Thumbs.db
Data/Sounds/: readme.docx
src/: Game.cpp  Game.h  main.cpp
src/GameObjects/: AnimationState.h  Coin.cpp  Coin.h  Enemy.cpp  Enemy.h  Laser.cpp  Laser.h  Life.cpp  Life.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Score.cpp  Score.h
src/GameStates/: GameOverMenu.cpp  GameOverMenu.h  GamePlay.cpp  GamePlay.h  GameState.h  GameWon.cpp  GameWon.h  MainMenu.cpp  MainMenu.h  OptionMenu.cpp  OptionMenu.h
